--- a/contracts/Move.toml
+++ b/contracts/Move.toml
@@ -3,6 +3,7 @@ name = "suiintents"
 edition = "2024.beta"
 
 [dependencies]
+# Sui and DeepBook are auto-injected for testnet environment
 
 [addresses]
 suiintents = "0x0"
