--- a/scripts/package.json
+++ b/scripts/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "swap": "npx tsx deepbook-swap.ts",
-    "query": "npx tsx query-pool.ts"
+    "query": "npx tsx query-pool.ts",
+    "fill": "npx tsx fill-intent.ts"
   },
   "dependencies": {
     "@mysten/sui.js": "^0.54.1"
