--- a/scripts/package.json
+++ b/scripts/package.json
@@ -7,7 +7,8 @@
     "swap": "tsx deepbook-swap.ts",
     "query": "npx tsx query-pool.ts",
     "fill": "tsx fill-intent.ts",
-    "create": "tsx create-intent.ts"
+    "create": "tsx create-intent.ts",
+    "register": "tsx register-solver.ts"
   },
   "dependencies": {
     "@mysten/sui.js": "^0.54.1"
